--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -1,4 +1,4 @@
-@import "./responsive.scss";
+@import "../../responsive.scss";
 .layout {
   // background-color: rebeccapurple;
   height: 100vh;
@@ -7,19 +7,27 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
 
-  @include lg{
+  @include lg {
     // background-color: rgb(242, 219, 210);
     max-width: 1200px;
-}
+  }
 
-  @include md{
+  @include md {
     // background-color: rgb(172, 172, 237);
     max-width: 768px;
   }
-  
-  @include sm{
+
+  @include sm {
     // background-color: rgb(242, 142, 142);
     max-width: 640px;
+  }
+
+  .content {
+    // background-color: rebeccapurple;
+    // height: calc(100vh - 100px);
+    flex: 1;
   }
 }
