--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -58,6 +58,46 @@ nav {
       padding: 12px 24px;
       margin: 20px;
     }
+
+    .user {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+
+      img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50px;
+        object-fit: cover;
+        margin-right: 20px;
+      }
+
+      span {
+        @include sm {
+          display: none;
+        }
+      }
+      .profile {
+        padding: 12px 24px;
+        background-color: #fece51;
+        cursor: pointer;
+        border: none;
+        position: relative;
+
+        .notification {
+          position: absolute;
+          top: -8px;
+          right: -8px;
+          background-color: red;
+          border-radius: 50px;
+          width: 26px;
+          height: 26px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
     .register {
       background-color: #fece51;
     }
@@ -87,7 +127,7 @@ nav {
       flex-direction: column;
       align-items: center;
       justify-content: center;
-        font-size: 24px ;
+      font-size: 24px;
       &.active {
         right: 0;
       }
